2009-02-26  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/DBContentHandler.py:

	Remove the leading '/' when inserting into files cache if the
	original path doesn't start with '/' (cvs).
	
2009-02-25  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/DBContentHandler.py:

	Move to deletes caches the children of a deleted directory.
	
2009-02-25  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Fix Metrics queries.
	
2009-02-25  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/Database.py:
	* pycvsanaly2/extensions/FileTypes.py:

	Use a view to get the files associated to actions independently of
	the action type.
	
2009-02-25  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/extensions/FileTypes.py:

	Fix FileTypes query and remove field commit_id from the table
	since it doesn't really make sense.
	
2009-02-25  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/DBContentHandler.py:

	Make sure we always keep in sync the file cache with the
	database. Add a deletes cache to store files that have been
	deleted or replaced but might be still referenced. 
	
2009-02-23  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/DBTempLog.py:

	Split the temp_log query into several queries to save memory.
	
2009-02-23  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/DBContentHandler.py:

	Add tests for DBContentHandler.
	
2009-02-20  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/DBProxyContentHandler.py:
	* pycvsanaly2/DBTempLog.py:

	Limit the maximun size of the queues used in ProxyContentHandler
	and TempLog. It saves a lot of memory. Hopefully OOM issues are 
	fixed now. 
	
2009-02-20  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/AsyncQueue.py:

	Add optional queue max size, bloking on put() when the queue reaches
	such a max size.
	
2009-02-18  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/SVNParser.py:
